Support Webkit Opera

--- a/t/testset/opera.yaml
+++ b/t/testset/opera.yaml
@@ -5,3 +5,10 @@
   is_android: false
   is_linux: false
   is_windows: true
+- ua: 'Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/33.0.1750.117 Safari/537.36 OPR/20.0.1387.64'
+  name: 'Opera'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: true
