--- a/t/testset/google_chrome.yaml
+++ b/t/testset/google_chrome.yaml
@@ -5,3 +5,10 @@
   is_android: false
   is_linux: false
   is_windows: true
+- ua: 'Mozilla/5.0 (Linux; U; Android-4.0.3; en-us; Galaxy Nexus Build/IML74K) AppleWebKit/535.7 (KHTML, like Gecko) CrMo/16.0.912.75 Mobile Safari/535.7'
+  name: 'Google Chrome'
+  is_bot: false
+  is_ios: false
+  is_android: true
+  is_linux: true
+  is_windows: false
