--- a/t/testset/slackbot.yaml
+++ b/t/testset/slackbot.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.0'
 - ua: 'Slack-ImgProxy 0.19 (+https://api.slack.com/robots)'
   name: 'Slack Imgproxy'
   is_bot: true
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '0.19'
 - ua: 'Slackbot 1.0(+https://api.slack.com/robots)'
   name: 'Slackbot'
   is_bot: true
@@ -20,3 +22,4 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.0'
