--- a/t/testset/bingbot.yaml
+++ b/t/testset/bingbot.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '2.0'
 - ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 7_0 like Mac OS X) AppleWebKit/537.51.1 (KHTML, like Gecko) Version/7.0 Mobile/11A465 Safari/9537.53 (compatible; bingbot/2.0; +http://www.bing.com/bingbot.htm)'
   name: Bingbot
   is_bot: true
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '2.0'
 - ua: 'Mozilla/5.0 (Windows Phone 8.1; ARM; Trident/7.0; Touch; rv:11.0; IEMobile/11.0; NOKIA; Lumia 530) like Gecko (compatible; bingbot/2.0; +http://www.bing.com/bingbot.htm)'
   name: Bingbot
   is_bot: true
@@ -20,3 +22,4 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '2.0'
