--- a/t/testset/bot_general.yaml
+++ b/t/testset/bot_general.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.1'
 - ua: 'Mozilla/5.0 (compatible; SemrushBot/1.2~bl; +http://www.semrush.com/bot.html)'
   name: 'SemrushBot'
   is_bot: true
@@ -12,6 +13,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.2'
 - ua: 'Kyoto-Tohoku-Crawler/v1 (Mozilla-compatible; kyoto-crawler-contact@nlp.ist.i.kyoto-u.ac.jp; http://nlp.ist.i.kyoto-u.ac.jp/?crawling-kt)'
   name: 'Kyoto-Tohoku-Crawler'
   is_bot: true
@@ -19,6 +21,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: 'v1'
 - ua: 'ICC-Crawler/2.0 (Mozilla-compatible; ; http://ucri.nict.go.jp/en/icccrawler.html)'
   name: 'ICC-Crawler'
   is_bot: true
@@ -26,6 +29,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '2.0'
 - ua: 'Mozilla/5.0 (compatible; YandexBot/3.0; +http://yandex.com/bots)'
   name: 'YandexBot'
   is_bot: true
@@ -33,6 +37,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '3.0'
 - ua: 'SafeDNSBot (https://www.safedns.com/searchbot)'
   name: 'SafeDNSBot'
   is_bot: true
