--- a/t/testset/http_clients.yaml
+++ b/t/testset/http_clients.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: true
   is_windows: false
+  version: '1.19.4'
 - ua: 'curl/7.19.7 (x86_64-redhat-linux-gnu) libcurl/7.19.7 NSS/3.27.1 zlib/1.2.3 libidn/1.18 libssh2/1.4.2'
   name: 'Curl'
   is_bot: false
@@ -12,6 +13,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '7.19.7'
 - ua: 'Wget/1.17.1 (mingw32)'
   name: Wget
   is_bot: false
@@ -19,6 +21,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '1.17.1'
 - ua: 'libwww-perl/6.43'
   name: 'libwww-perl'
   is_bot: false
@@ -26,6 +29,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '6.43'
 - ua: 'lwp-request/5.834 libwww-perl/5.834'
   name: 'libwww-perl'
   is_bot: false
@@ -33,6 +37,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '5.834'
 - ua: 'WWW-Mechanize/1.95'
   name: 'WWW-Mechanize'
   is_bot: false
@@ -40,6 +45,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.95'
 - ua: 'LWP::Simple/6.43'
   name: 'LWP::Simple'
   is_bot: false
@@ -47,6 +53,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '6.43'
 - ua: 'lwp-trivial/1.35'
   name: 'LWP::Simple'
   is_bot: false
@@ -54,6 +61,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.35'
 - ua: 'Furl::HTTP/3.13'
   name: 'Furl'
   is_bot: false
@@ -61,6 +69,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '3.13'
 - ua: 'HTTPie/1.0.2'
   name: HTTPie
   is_bot: false
@@ -68,6 +77,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.0.2'
 - ua: 'Python-urllib/1.16'
   name: 'Python-urllib'
   is_bot: false
@@ -75,6 +85,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.16'
 - ua: 'PycURL/7.19.5 libcurl/7.38.0 GnuTLS/3.3.8 zlib/1.2.8 libidn/1.29 libssh2/1.4.3 librtmp/2.3'
   name: 'PycURL'
   is_bot: false
@@ -82,6 +93,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '7.19.5'
 - ua: 'GuzzleHttp/6.2.1 curl/7.47.0 PHP/7.0.13-0ubuntu0.16.04.1'
   name: 'Guzzle'
   is_bot: false
@@ -89,6 +101,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '6.2.1'
 - ua: 'WordPress/4.5.3; http://example.com'
   name: 'WordPress'
   is_bot: false
@@ -96,6 +109,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '4.5.3'
 - ua: 'The Incutio XML-RPC PHP Library -- WordPress/4.9.13'
   name: 'WordPress'
   is_bot: false
@@ -103,6 +117,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '4.9.13'
 - ua: 'HTTP_Request2/2.3.0 (http://pear.php.net/package/http_request2) PHP/5.3.3'
   name: 'PHP'
   is_bot: false
@@ -110,6 +125,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '5.3.3'
 - ua: 'Ruby'
   name: 'Ruby'
   is_bot: false
@@ -124,6 +140,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '3.1'
 - ua: 'Go-http-client/1.1'
   name: 'Go-http-client'
   is_bot: false
@@ -131,6 +148,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '1.1'
 - ua: 'Apache-HttpClient/4.5.2 (Java/1.8.0_171)'
   name: 'Apache-HttpClient'
   is_bot: false
@@ -138,6 +156,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  version: '4.5.2'
 - ua: 'Atig::Http/f68db1058bf9abdbbffd36e7dd9b3f5dbff7a6d1 (http.rb; net-irc) Ruby/2.5.1 (x86_64-linux-gnu)'
   name: 'Atig'
   is_bot: false
@@ -145,6 +164,7 @@
   is_android: false
   is_linux: true
   is_windows: false
+  version: 'f68db1058bf9abdbbffd36e7dd9b3f5dbff7a6d1'
 - ua: 'okhttp/3.11.0'
   name: 'OkHttp'
   is_bot: false
@@ -152,3 +172,4 @@
   is_android: false
   is_linux: flase
   is_windows: false
+  version: '3.11.0'
