--- a/t/testset/microsoft_internet_explorer.yaml
+++ b/t/testset/microsoft_internet_explorer.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '6.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)'
   name: 'Internet Explorer'
   is_bot: false
@@ -12,6 +13,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '7.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; 2004/11/08; GoogleT5; .NET CLR 1.1.4322; .NET CLR 2.0.50727; InfoPath.1; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729)'
   name: 'Internet Explorer'
   is_bot: false
@@ -19,6 +21,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1) ; .NET CLR 2.0.50727; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729; .NET4.0C; BOIE8;ENUSMSCOM)'
   name: 'Internet Explorer'
   is_bot: false
@@ -26,6 +29,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0; Trident/4.0)'
   name: 'Internet Explorer'
   is_bot: false
@@ -33,6 +37,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.1; Trident/4.0)'
   name: 'Internet Explorer'
   is_bot: false
@@ -40,6 +45,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '8.0'
 - ua: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)'
   name: 'Internet Explorer'
   is_bot: false
@@ -47,6 +53,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '9.0'
 - ua: 'Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Win64; x64; Trident/6.0)'
   name: 'Internet Explorer'
   is_bot: false
@@ -54,6 +61,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '10.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Trident/7.0; BOIE9;JAJP; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -61,6 +69,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -68,6 +77,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Trident/7.0; MALCJS; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -75,6 +85,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Win64; x64; Trident/7.0; MASPJS; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -82,6 +93,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; WOW64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -89,6 +101,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Win64; x64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -96,6 +109,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Win64; x64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
   is_bot: false
@@ -103,3 +117,4 @@
   is_android: false
   is_linux: false
   is_windows: true
+  version: '11.0'
