Support Google-Mobile

--- a/t/testset/googlebot_misc.yaml
+++ b/t/testset/googlebot_misc.yaml
@@ -64,3 +64,17 @@
   is_android: false
   is_linux: false
   is_windows: false
+- ua: 'SAMSUNG-SGH-E250/1.0 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0 (compatible; Googlebot-Mobile/2.1; +http://www.google.com/bot.html)'
+  name: Googlebot-Mobile
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+- ua: 'DoCoMo/2.0 N905i(c100;TB;W24H16) (compatible; Googlebot-Mobile/2.1; +http://www.google.com/bot.html)'
+  name: Googlebot-Mobile
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
