--- a/t/testset/feature_phone.yaml
+++ b/t/testset/feature_phone.yaml
@@ -13,6 +13,13 @@
   is_android: false
   is_linux: false
   is_windows: false
+- ua: 'Mozilla/4.08 (N901iS;FOMA;c300;TB;W24H12)'
+  name: 'DoCoMo N901iS'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
 # https://www.au.com/ezfactory/tec/spec/new_win/ezkishu.html
 - ua: 'KDDI-SH3E UP.Browser/6.2_7.2.7.1.K.3.358 (GUI) MMP/2.0'
   name: 'AU KDDI SH3E'
