--- a/t/testset/feature_phone.yaml
+++ b/t/testset/feature_phone.yaml
@@ -29,3 +29,25 @@
   is_linux: false
   is_windows: false
   version: '6.2_7.2.7.1.K.3.358'
+# http://creation.mb.softbank.jp/mc/terminal/terminal_info/terminal_useragent.html
+- ua: 'SoftBank/2.0/301SH/SHJ001[/Serial] Browser/NetFront/3.5 Profile/MIDP-2.0 Configuration/CLDC-1.1'
+  name: 'SoftBank 301SH'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+- ua: 'Vodafone/1.0/V803T/TJ001[/Serial] Browser/VF-Browser/1.0 Profile/MIDP-2.0 Configuration/CLDC-1.1 Ext-J-Profile/JSCL-1.2.2 Ext-V-Profile/VSCL-2.0.0'
+  name: 'SoftBank V803T'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+- ua: 'Mozilla/4.08 (912SH;SoftBank) NetFront/3.4'
+  name: 'SoftBank 912SH'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
