--- a/t/testset/microsoft_edge.yaml
+++ b/t/testset/microsoft_edge.yaml
@@ -14,3 +14,12 @@
   is_linux: false
   is_windows: true
   version: '74.1.96.24'
+- ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0 EdgiOS/44.10.19 Mobile/15E148 Safari/605.1.15'
+  name: 'Microsoft Edge'
+  is_bot: false
+  is_ios: true
+  is_android: false
+  is_linux: false
+  is_windows: false
+  version: '44.10.19'
+
