--- a/t/testset/opera.yaml
+++ b/t/testset/opera.yaml
@@ -14,3 +14,11 @@
   is_linux: false
   is_windows: true
   version: '20.0.1387.64'
+- ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) OPT/2.1.0 Mobile/15E148'
+  name: 'Opera Touch'
+  is_bot: false
+  is_ios: true
+  is_android: false
+  is_linux: false
+  is_windows: false
+  version: '2.1.0'
