--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -43,3 +43,11 @@
   is_android: false
   is_linux: false
   is_windows: false
+- ua: 'Mozilla/5.0 (compatible; Daum/4.1; +http://cs.daum.net/faq/15/4118.html?faqId=28966)'
+  name: 'Daum'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  version: '4.1'
