Add `is_chromeos` method

--- a/t/testset/bot/bot_general.yaml
+++ b/t/testset/bot/bot_general.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.1'
 - ua: 'Mozilla/5.0 (compatible; SemrushBot/1.2~bl; +http://www.semrush.com/bot.html)'
   name: 'SemrushBot'
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.2'
 - ua: 'Kyoto-Tohoku-Crawler/v1 (Mozilla-compatible; kyoto-crawler-contact@nlp.ist.i.kyoto-u.ac.jp; http://nlp.ist.i.kyoto-u.ac.jp/?crawling-kt)'
   name: 'Kyoto-Tohoku-Crawler'
@@ -21,6 +23,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: 'v1'
 - ua: 'ICC-Crawler/2.0 (Mozilla-compatible; ; http://ucri.nict.go.jp/en/icccrawler.html)'
   name: 'ICC-Crawler'
@@ -29,6 +32,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
 - ua: 'SafeDNSBot (https://www.safedns.com/searchbot)'
   name: 'SafeDNSBot'
@@ -37,3 +41,4 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
