--- a/t/testset/bot/googlebot_ad.yaml
+++ b/t/testset/bot/googlebot_ad.yaml
@@ -6,6 +6,7 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
 - ua: 'Mediapartners-Google'
   name: Mediapartners-Google
   is_bot: true
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'AdsBot-Google (+http://www.google.com/adsbot.html)'
   name: AdsBot-Google
   is_bot: true
@@ -20,3 +22,4 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
