--- a/t/testset/bot/googlebot_misc.yaml
+++ b/t/testset/bot/googlebot_misc.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
 - ua: 'Googlebot-News'
   name: Googlebot-News
@@ -14,6 +15,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'Googlebot-Video/1.0'
   name: Googlebot-Video
   is_bot: true
@@ -21,6 +23,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
 - ua: 'APIs-Google (+https://developers.google.com/webmasters/APIs-Google.html)'
   name: APIs-Google
@@ -29,6 +32,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'FeedFetcher-Google; (+http://www.google.com/feedfetcher.html)'
   name: FeedFetcher-Google
   is_bot: true
@@ -36,3 +40,4 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
