--- a/t/testset/bot/mail_ru_bot.yaml
+++ b/t/testset/bot/mail_ru_bot.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
 - ua: 'Mozilla/5.0 (compatible; Linux x86_64; Mail.RU_Bot/Fast/2.0; +//go.mail.ru/help/robots)'
   name: 'Mail.RU_Bot'
@@ -13,4 +14,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
