--- a/t/testset/browser/uc_browser.yaml
+++ b/t/testset/browser/uc_browser.yaml
@@ -5,6 +5,7 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
   version: '11.7.0.953'
 - ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X; en-US) AppleWebKit/537.51.1 (KHTML, like Gecko) Mobile/17C54 UCBrowser/11.3.5.1203 Mobile'
   name: 'UC Browser'
@@ -13,5 +14,6 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '11.3.5.1203'
 
