--- a/t/testset/bot/baiduspider.yaml
+++ b/t/testset/bot/baiduspider.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
 - ua: 'Mozilla/5.0 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)'
   name: Baiduspider
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
 - ua: 'Baiduspider-image+(+http://www.baidu.com/search/spider.htm)'
   name: 'Baiduspider'
@@ -21,3 +23,4 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
