--- a/t/testset/bot/bingpreview.yaml
+++ b/t/testset/bot/bingpreview.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '1.0b'
 - ua: 'Mozilla/5.0 (Windows Phone 8.1; ARM; Trident/7.0; Touch; rv:11.0; IEMobile/11.0; NOKIA; Lumia 530) like Gecko BingPreview/1.0b'
   name: BingPreview
@@ -14,4 +15,5 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '1.0b'
