--- a/t/testset/bot/facebookcrawler.yaml
+++ b/t/testset/bot/facebookcrawler.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.1'
 - ua: 'facebookexternalhit/1.1'
   name: 'Facebook Crawler'
@@ -14,4 +15,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.1'
