--- a/t/testset/bot/googlebot.yaml
+++ b/t/testset/bot/googlebot.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.1'
 - ua: 'Googlebot/2.1 (+http://www.google.com/bot.html)'
   name: Googlebot
@@ -14,6 +15,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.1'
 - ua: 'Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; Googlebot/2.1; +http://www.google.com/bot.html) Safari/537.36'
   name: Googlebot
@@ -22,6 +24,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.1'
 - ua: 'Mozilla/5.0 (Linux; Android 6.0.1; Nexus 5X Build/MMB29P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2272.96 Mobile Safari/537.36 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)'
   name: Googlebot
@@ -30,6 +33,7 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
   version: '2.1'
 - ua: 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko)  Chrome/49.0.2623.75 Safari/537.36 Google Favicon'
   name: 'Google Favicon'
@@ -38,3 +42,4 @@
   is_android: false
   is_linux: true
   is_windows: false
+  is_chromeos: false
