--- a/t/testset/bot/googlebot_mobile.yaml
+++ b/t/testset/bot/googlebot_mobile.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'Mozilla/5.0 (Linux; Android 5.0; SM-G920A) AppleWebKit (KHTML, like Gecko) Chrome Mobile Safari (compatible; AdsBot-Google-Mobile; +http://www.google.com/mobile/adsbot.html)'
   name: 'AdsBot-Google-Mobile Android'
   is_bot: true
@@ -13,6 +14,7 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
 - ua: 'AdsBot-Google-Mobile-Apps'
   name: AdsBot-Google-Mobile-Apps
   is_bot: true
@@ -20,6 +22,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'SAMSUNG-SGH-E250/1.0 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0 (compatible; Googlebot-Mobile/2.1; +http://www.google.com/bot.html)'
   name: Googlebot-Mobile
   is_bot: true
@@ -27,6 +30,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'DoCoMo/2.0 N905i(c100;TB;W24H16) (compatible; Googlebot-Mobile/2.1; +http://www.google.com/bot.html)'
   name: Googlebot-Mobile
   is_bot: true
@@ -34,6 +38,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'Mozilla/5.0 (Linux; Android 8.0; Pixel 2 Build/OPD3.170816.012; DuplexWeb-Google/1.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.131 Mobile Safari/537.36'
   name: DuplexWeb-Google
   is_bot: true
@@ -41,6 +46,7 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
   version: '1.0'
 - ua: 'Mozilla/5.0 (Linux; Android 4.2.1; en-us; Nexus 5 Build/JOP40D) AppleWebKit/535.19 (KHTML, like Gecko; googleweblight) Chrome/38.0.1025.166 Mobile Safari/535.19'
   name: googleweblight
@@ -49,3 +55,4 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
