--- a/t/testset/bot/hatena_bot.yaml
+++ b/t/testset/bot/hatena_bot.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '0.5'
 - ua: 'Hatena Pagetitle Agent/1.0'
   name: 'Hatena Pagetitle Agent'
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
 - ua: 'Hatena Star UserAgent/2'
   name: 'Hatena Star UserAgent'
@@ -21,6 +23,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2'
 - ua: 'Hatena-Favicon/2 (http://www.hatena.ne.jp/faq/)'
   name: 'Hatena-Favicon'
@@ -29,6 +32,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2'
 - ua: 'Hatena::Fetcher/0.01 (master) Furl/3.06'
   name: 'Hatena::Fetcher'
@@ -37,6 +41,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '0.01'
 - ua: 'HatenaBookmark/0.03 (Hatena::Bookmark; master;) Furl/3.13'
   name: 'HatenaBookmark'
@@ -45,6 +50,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '0.03'
 - ua: 'Mozilla/5.0 (Linux; U; Android 4.1.2; ja-jp; SC-06D Build/JZO54K) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 HatenaBookmark/Android (2.7.2)'
   name: 'HatenaBookmark'
@@ -53,3 +59,4 @@
   is_android: true
   is_linux: true
   is_windows: false
+  is_chromeos: false
