--- a/t/testset/bot/msnbot.yaml
+++ b/t/testset/bot/msnbot.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0b'
 - ua: 'msnbot-media/1.1 (+http://search.msn.com/msnbot.htm)'
   name: 'msnbot'
@@ -13,4 +14,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.1'
