--- a/t/testset/bot/oracle_grapeshotcrawler.yaml
+++ b/t/testset/bot/oracle_grapeshotcrawler.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
 - ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 8_3 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12F70 Safari/600.1. 4 (compatible; GrapeshotCrawler/2.0; +http://www.grapeshot.co.uk/crawler.php)'
   name: 'Oracle GrapeshotCrawler'
@@ -13,4 +14,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.0'
