--- a/t/testset/bot/slackbot.yaml
+++ b/t/testset/bot/slackbot.yaml
@@ -6,6 +6,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
 - ua: 'Slack-ImgProxy 0.19 (+https://api.slack.com/robots)'
   name: 'Slack Imgproxy'
@@ -14,6 +15,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '0.19'
 - ua: 'Slackbot 1.0(+https://api.slack.com/robots)'
   name: 'Slackbot'
@@ -22,4 +24,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
