--- a/t/testset/bot/yahoo_japan_bot.yaml
+++ b/t/testset/bot/yahoo_japan_bot.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
 - ua: 'Y!J-BUZZ/1.0 ifetcher'
   name: 'Yahoo!Japan Crawler'
   is_bot: true
@@ -12,4 +13,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '1.0'
