--- a/t/testset/browser/microsoft_internet_explorer.yaml
+++ b/t/testset/browser/microsoft_internet_explorer.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '6.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)'
   name: 'Internet Explorer'
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '7.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; 2004/11/08; GoogleT5; .NET CLR 1.1.4322; .NET CLR 2.0.50727; InfoPath.1; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729)'
   name: 'Internet Explorer'
@@ -21,6 +23,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1) ; .NET CLR 2.0.50727; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729; .NET4.0C; BOIE8;ENUSMSCOM)'
   name: 'Internet Explorer'
@@ -29,6 +32,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0; Trident/4.0)'
   name: 'Internet Explorer'
@@ -37,6 +41,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '8.0'
 - ua: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.1; Trident/4.0)'
   name: 'Internet Explorer'
@@ -45,6 +50,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '8.0'
 - ua: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)'
   name: 'Internet Explorer'
@@ -53,6 +59,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '9.0'
 - ua: 'Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Win64; x64; Trident/6.0)'
   name: 'Internet Explorer'
@@ -61,6 +68,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '10.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Trident/7.0; BOIE9;JAJP; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -69,6 +77,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -77,6 +86,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Trident/7.0; MALCJS; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -85,6 +95,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.1; Win64; x64; Trident/7.0; MASPJS; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -93,6 +104,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; WOW64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -101,6 +113,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Win64; x64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -109,6 +122,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; Win64; x64; Trident/7.0; Touch; rv:11.0) like Gecko'
   name: 'Internet Explorer'
@@ -117,4 +131,5 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '11.0'
