--- a/t/testset/browser/opera.yaml
+++ b/t/testset/browser/opera.yaml
@@ -5,6 +5,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '9.52'
 - ua: 'Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/33.0.1750.117 Safari/537.36 OPR/20.0.1387.64'
   name: 'Opera'
@@ -13,6 +14,7 @@
   is_android: false
   is_linux: false
   is_windows: true
+  is_chromeos: false
   version: '20.0.1387.64'
 - ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) OPT/2.1.0 Mobile/15E148'
   name: 'Opera Touch'
@@ -21,4 +23,5 @@
   is_android: false
   is_linux: false
   is_windows: false
+  is_chromeos: false
   version: '2.1.0'
