--- a/t/testset/bot/googlebot_mobile.yaml
+++ b/t/testset/bot/googlebot_mobile.yaml
@@ -1,6 +1,6 @@
 # https://support.google.com/webmasters/answer/1061943?hl=en
 - ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 (compatible; AdsBot-Google-Mobile; +http://www.google.com/mobile/adsbot.html)'
-  name: 'AdsBot-Google-Mobile iPhone'
+  name: 'AdsBot-Google-Mobile'
   is_bot: true
   is_ios: true
   is_android: false
@@ -8,7 +8,7 @@
   is_windows: false
   is_chromeos: false
 - ua: 'Mozilla/5.0 (Linux; Android 5.0; SM-G920A) AppleWebKit (KHTML, like Gecko) Chrome Mobile Safari (compatible; AdsBot-Google-Mobile; +http://www.google.com/mobile/adsbot.html)'
-  name: 'AdsBot-Google-Mobile Android'
+  name: 'AdsBot-Google-Mobile'
   is_bot: true
   is_ios: false
   is_android: true
