--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,10 @@ jobs:
             curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
         if: matrix.perl-version == 'latest'
       - name: Run tests
-        run: perl Build.PL && ./Build build
+        run: |
+            perl Build.PL
+            ./Build manifest
+            ./Build build
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
