--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,8 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
+            perl Build.PL
+            ./Build build
             cover -test
             cover -report coveralls
         if: matrix.perl-version == 'latest'
