--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,22 +27,13 @@ jobs:
       - uses: actions/checkout@v1
       - name: perl -V
         run: perl -V
-      - name: Install dependencies
-        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --show-build-log-on-failure
-        if: matrix.perl-version != 'latest'
-      - name: Install dependencies with develop
-        run: |
-            curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
-            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
-        if: matrix.perl-version == 'latest'
-      - name: Run test
-        run: prove -s -l t
+      - name: Run build
+        run: Build.PL && ./Build build
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
-            perl Build.PL
-            ./Build build
+            curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Devel::Cover::Report::Coveralls
             cover -test
             cover -report coveralls
         if: matrix.perl-version == 'latest'
