--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Run build
-        run: Build.PL && ./Build build
+        run: perl Build.PL && ./Build build
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
