--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -21,4 +21,4 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Run build
-        run: Build.PL && ./Build build
+        run: perl Build.PL && ./Build build
