--- a/.github/workflows/build_mac.yml
+++ b/.github/workflows/build_mac.yml
@@ -16,5 +16,7 @@ jobs:
       - uses: actions/checkout@master
       - name: perl -V
         run: perl -V
+      - name: Install M::B
+        run: curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Module::Build
       - name: Run build
         run: perl Build.PL && ./Build build
