--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -20,5 +20,7 @@ jobs:
           echo "##[add-path]C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
       - name: perl -V
         run: perl -V
+      - name: Install M::B
+        run: curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Module::Build
       - name: Run build
         run: perl Build.PL && ./Build build
