--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,10 @@ jobs:
       - name: Run build
         run: |
             perl Build.PL
+            ./Build
+            ./Build manifest
             ./Build installdeps
-            ./Build build
+            ./Build test
       - name: Run Cover
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
