--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -25,5 +25,7 @@ jobs:
       - name: Run build
         run: |
             perl Build.PL
+            ./Build
+            ./Build manifest
             ./Build installdeps
-            ./Build build
+            ./Build test
