--- a/.github/workflows/build_mac.yml
+++ b/.github/workflows/build_mac.yml
@@ -23,4 +23,5 @@ jobs:
             perl Build.PL
             ./Build installdeps
             ./Build manifest
-            ./Build test
+      - name: Run test
+        run: ./Build test
