--- a/.github/workflows/build_xt.yml
+++ b/.github/workflows/build_xt.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image:
-        perl: 'latest'
+      image: perl:latest
 
     steps:
       - uses: actions/checkout@v1
