--- a/.github/workflows/build_mac.yml
+++ b/.github/workflows/build_mac.yml
@@ -16,10 +16,8 @@ jobs:
       - uses: actions/checkout@master
       - name: perl -V
         run: perl -V
-      - name: Install cpanm
-        run: curl -L http://cpanmin.us/ | perl - App::cpanminus
       - name: Install dependencies
-        run: cpanm -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+        run: curl -L http://cpanmin.us/ | perl - -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
       - name: Run build
         run: |
             perl Build.PL
