--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -20,10 +20,10 @@ jobs:
           echo "##[add-path]C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
       - name: perl -V
         run: perl -V
-      - name: Install cpanm
-        run: curl -L http://cpanmin.us/ | perl - App::cpanminus
       - name: Install dependencies
-        run: cpanm -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+        run: |
+            curl -L http://cpanmin.us/ | perl - -n Win32
+            curl -L http://cpanmin.us/ | perl - -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
       - name: Run build
         run: |
             perl Build.PL
